--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "theholyglorpian",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "jadeyn",
@@ -12,5 +13,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "tmi.js": "^1.8.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
